docs: добавлена полная документация и структура проекта
- Обновлён requirements.txt с правильными версиями
- Создан подробный README.md с инструкциями
- Улучшен .env.example с комментариями
- Добавлена документация по структуре config.xlsx
- Создан CONTRIBUTING.md для контрибьюторов
- Добавлены LICENSE и .gitattributes

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,70 @@
-APP_HOST=0.0.0.0
-APP_PORT=8787
+# ================================
+# Parser Maps Pro Configuration
+# ================================
 
-ADMIN_USER=admin
-ADMIN_PASS=change_me
+# -----------------
+# Сервер FastAPI
+# -----------------
+APP_HOST=0.0.0.0          # IP адрес для прослушивания (0.0.0.0 = все интерфейсы)
+APP_PORT=8787             # Порт веб-интерфейса
 
-DB_KIND=sqlite
-DB_PATH=./output/progress.sqlite
-DB_DSN=postgresql://user:pass@127.0.0.1:5432/parser_maps
+# -----------------
+# Аутентификация
+# -----------------
+ADMIN_USER=admin          # Логин для доступа к веб-интерфейсу
+ADMIN_PASS=change_me      # ⚠️ ОБЯЗАТЕЛЬНО измените пароль!
 
-EXPORT_XLSX=./output/results.xlsx
-EXPORT_SHEET=Results
+# -----------------
+# База данных
+# -----------------
+DB_KIND=sqlite            # Тип БД: sqlite или postgres
+DB_PATH=./output/progress.sqlite           # Путь к SQLite БД (если DB_KIND=sqlite)
+DB_DSN=postgresql://user:pass@127.0.0.1:5432/parser_maps  # DSN для PostgreSQL (если DB_KIND=postgres)
 
-CHROME_BINARY=
-HEADLESS=0
+# -----------------
+# Экспорт данных
+# -----------------
+EXPORT_XLSX=./output/results.xlsx    # Путь для экспорта результатов
+EXPORT_SHEET=Results                 # Имя листа в Excel
 
-LINKS_WORKERS=1
-INFO_WORKERS=1
+# -----------------
+# Selenium / Chrome
+# -----------------
+CHROME_BINARY=                       # Путь к Chrome/Chromium (оставьте пустым для автопоиска)
+HEADLESS=0                           # Режим браузера: 0 = с UI (рекомендуется), 1 = headless
 
-SAVE_DEBUG_HTML=1
-DEBUG_DIR=./debug
+# -----------------
+# Производительность
+# -----------------
+LINKS_WORKERS=1          # Количество потоков для сбора ссылок (рекомендуется 1 для избежания блокировок)
+INFO_WORKERS=1           # Количество потоков для сбора информации об организациях
 
-MAPSCAN_ALWAYS=1
-MAPSCAN_GRID=3
-MAPSCAN_DRAG_PX=420
+# -----------------
+# Отладка
+# -----------------
+SAVE_DEBUG=1             # Сохранять HTML страниц для отладки: 0 = нет, 1 = да
+DEBUG_DIR=./debug        # Папка для отладочных файлов
+LOG_LEVEL=INFO           # Уровень логирования: DEBUG, INFO, WARNING, ERROR
+
+# -----------------
+# Директории
+# -----------------
+DATA_DIR=./data          # Папка для config.xlsx
+RUNTIME_DIR=./runtime    # Папка для временных файлов и Chrome профилей
+
+# -----------------
+# MapScan (глубокое сканирование карты)
+# -----------------
+MAPSCAN_ALWAYS=1         # Всегда использовать MapScan: 0 = нет, 1 = да
+MAPSCAN_GRID=3           # Размер сетки сканирования (3 = 3x3 = 9 областей)
+MAPSCAN_DRAG_PX=420      # Сдвиг карты в пикселях между областями
+
+# -----------------
+# Яндекс.Карты
+# -----------------
+Y_DOMAIN_PREF=auto       # Предпочтительный домен: auto, ru, com, by и т.д.
+
+# -----------------
+# Дополнительно
+# -----------------
+SAVE_DEBUG_HTML=1        # Сохранять HTML (дубликат SAVE_DEBUG для обратной совместимости)
