--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-beautifulsoup4
-lxml
-pandas
-openpyxl
-fastapi
-uvicorn
-python-multipart
-python-dotenv
-psycopg2-binary
-selenium>=4.19.0
-requests<3
-rich>=13.7.0
+beautifulsoup4==4.14.3
+lxml==6.0.2
+pandas==2.3.3
+openpyxl==3.1.2
+fastapi==0.115.6
+uvicorn==0.34.0
+python-multipart==0.0.20
+python-dotenv==1.0.1
+psycopg2-binary==2.9.9
+selenium==4.27.1
+requests==2.31.0
+rich==13.9.4
